Setting up paths in naive questions.

--- a/Points_of_view/points/templates/naive-questions.html
+++ b/Points_of_view/points/templates/naive-questions.html
@@ -33,12 +33,12 @@
                         </a>
                     </li>
                     <li class="header-nav-item">
-                        <a href="portfolio.html" class="header-nav-link">
+                        <a href="{% url 'portfolio' %}" class="header-nav-link">
                             {% translate 'Портфолио' %}
                         </a>
                     </li>
                     <li class="header-nav-item">
-                        <a href="contacts.html" class="header-nav-link">
+                        <a href="{% url 'contacts' %}" class="header-nav-link">
                             {% translate 'Контакты' %}
                         </a>
                     </li>
