--- a/Points_of_view/points/templates/art-cartel.html
+++ b/Points_of_view/points/templates/art-cartel.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="ru">
 
 <head>
@@ -8,9 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../static/img/favicon.png" type="image/png">
-    <link rel="stylesheet" href="../static/style/normalize.css">
-    <link rel="stylesheet" href="../static/style/art-cartel.css">
+<!--    <link rel="shortcut icon" href="../static/img/favicon.png" type="image/png">-->
+<!--    <link rel="stylesheet" href="../static/style/normalize.css">-->
+<!--    <link rel="stylesheet" href="../static/style/art-cartel.css">-->
+    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/png">
+    <link rel="stylesheet" href="{% static 'style/normalize.css' %}">
+    <link rel="stylesheet" href="{% static 'style/art-cartel.css' %}">
 </head>
 
 <body>
