--- a/Points_of_view/points/templates/naive-questions.html
+++ b/Points_of_view/points/templates/naive-questions.html
@@ -22,7 +22,8 @@
     <header class="header container">
         <div class="header-container">
             <div class="header-logo">
-                <img src="../static/img/logo-1.svg" alt="logo">
+<!--                <img src="../static/img/logo-1.svg" alt="logo">-->
+                <img src="{% static 'img/logo-1.svg' %}" alt="logo">
             </div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
@@ -124,7 +125,8 @@
                     {% translate 'о проекте' %}
                 </h2>
                 <div class="about-project-wrap">
-                    <img src="../static/img/naive-question-about.png" alt="video interview with the artist">
+<!--                    <img src="../static/img/naive-question-about.png" alt="video interview with the artist">-->
+                    <img src="{% static 'img/naive-question-about.png' %}" alt="video interview with the artist">
                     <div class="about-project-inner-wrapper">
                         <p class="about-project-descr-big">
                             {% translate 'Наивные вопросы художнику - это видеоинтервью, на которых художник' %}
@@ -208,7 +210,8 @@
                 </h2>
                 <div class="realization-wrap">
                     <div class="realization-card">
-                        <img src="../static/img/Ayumi-Adachi.png" alt="photo of Ayumi Adachi">
+<!--                        <img src="../static/img/Ayumi-Adachi.png" alt="photo of Ayumi Adachi">-->
+                        <img src="{% static 'img/Ayumi-Adachi.png' %}" alt="photo of Ayumi Adachi">
                         <h3 class="relization-name">
                             Ayumi Adachi
                         </h3>
@@ -217,7 +220,8 @@
                         </p>
                     </div>
                     <div class="realization-card">
-                        <img src="../static/img/Hayk-Adamyan.png" alt="photo of Hayk Adamyan">
+<!--                        <img src="../static/img/Hayk-Adamyan.png" alt="photo of Hayk Adamyan">-->
+                        <img src="{% static 'img/Hayk-Adamyan.png' %}" alt="photo of Hayk Adamyan">
                         <h3 class="relization-name">
                             {% translate 'Айк Адамян' %}
                         </h3>
@@ -226,7 +230,8 @@
                         </p>
                     </div>
                     <div class="realization-card">
-                        <img src="../static/img/Alexey-Manukyan.png" alt="photo of Alexey Manukyan">
+<!--                        <img src="../static/img/Alexey-Manukyan.png" alt="photo of Alexey Manukyan">-->
+                        <img src="{% static 'img/Alexey-Manukyan.png' %}" alt="photo of Alexey Manukyan">
                         <h3 class="relization-name">
                             {% translate 'Алексей Манукян' %}
                         </h3>
