--- a/Points_of_view/points/templates/art-diving.html
+++ b/Points_of_view/points/templates/art-diving.html
@@ -21,7 +21,8 @@
     <header class="header container">
         <div class="header-container">
             <div class="header-logo">
-                <img src="../static/img/logo-1.svg" alt="logo">
+<!--                <img src="../static/img/logo-1.svg" alt="logo">-->
+                <img src="{% static 'img/logo-1.svg' %}" alt="logo">
             </div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
@@ -36,12 +37,12 @@
                         </a>
                     </li>
                     <li class="header-nav-item">
-                        <a href="portfolio.html" class="header-nav-link">
+                        <a href="{% url 'portfolio' %}" class="header-nav-link">
                             Портфолио
                         </a>
                     </li>
                     <li class="header-nav-item">
-                        <a href="contacts.html" class="header-nav-link">
+                        <a href="{% url 'contacts' %}" class="header-nav-link">
                             Контакты
                         </a>
                     </li>
