--- a/Points_of_view/points/templates/index.html
+++ b/Points_of_view/points/templates/index.html
@@ -22,7 +22,8 @@
     <header class="header container">
         <div class="header-container">
             <div class="header-logo">
-                <img src="../static/img/logo-1.svg" alt="logo">
+<!--                <img src="../static/img/logo-1.svg" alt="logo">-->
+                <img src="{% static 'img/logo-1.svg' %}" alt="logo">
             </div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
@@ -288,7 +289,8 @@
 
     <footer class="footer container">
         <div class="footer-container">
-            <img src="../static/img/logo-2.svg" alt="logo" class="footer-logo">
+<!--            <img src="../static/img/logo-2.svg" alt="logo" class="footer-logo">-->
+            <img src="{% static 'img/logo-2.svg' %}" alt="logo" class="footer-logo">
             <nav class="footer-nav">
                 <ul class="footer-nav-list">
                     <li class="footer-nav-item">
@@ -360,7 +362,8 @@
             </ul>
         </div>
     </footer>
-    <script src="../static/scripts/index.js"></script>
+<!--    <script src="../static/scripts/index.js"></script>-->
+    <script src="{% static 'scripts/index.js' %}"></script>
 </body>
 
 </html>
