--- a/Points_of_view/points/templates/portfolio.html
+++ b/Points_of_view/points/templates/portfolio.html
@@ -21,7 +21,8 @@
     <header class="header container">
         <div class="header-container">
             <div class="header-logo">
-                <img src="../static/img/logo-1.svg" alt="logo">
+<!--                <img src="../static/img/logo-1.svg" alt="logo">-->
+                <img src="{% static 'img/logo-1.svg' %}" alt="logo">
             </div>
             <nav class="header-nav">
                 <ul class="header-nav-list">
