--- a/Points_of_view/points/templates/portfolio.html
+++ b/Points_of_view/points/templates/portfolio.html
@@ -37,12 +37,12 @@
                         </a>
                     </li>
                     <li class="header-nav-item">
-                        <a href="portfolio.html" class="header-nav-link">
+                        <a href="{% url 'portfolio' %}" class="header-nav-link">
                             Портфолио
                         </a>
                     </li>
                     <li class="header-nav-item">
-                        <a href="contacts.html" class="header-nav-link">
+                        <a href="{% url 'contacts' %}" class="header-nav-link">
                             Контакты
                         </a>
                     </li>
