fixed inner links

--- a/Points_of_view/points/templates/art-cartel.html
+++ b/Points_of_view/points/templates/art-cartel.html
@@ -32,7 +32,7 @@
                         </a>
                     </li>
                     <li class="header-nav-item">
-                        <a href="#projects" class="header-nav-link">
+                        <a href="{% url 'index' %}#projects" class="header-nav-link">
                             Проекты
                         </a>
                     </li>
