--- a/Points_of_view/points/templates/index.html
+++ b/Points_of_view/points/templates/index.html
@@ -257,7 +257,7 @@
             </div>
         </section>
 
-        <section class="team container" id="team">
+        <section class="team container" id="teamid">
             <div class="team-container">
                 <h2 class="subtitle team-subtitle">
                     {% translate 'Команда' %}
@@ -303,7 +303,7 @@
                         <a href="{% url 'portfolio' %}" class="footer-nav-link">{% translate 'Портфолио' %}</a>
                     </li>
                     <li class="footer-nav-item">
-                        <a href="#team" class="footer-nav-link">{% translate 'Команда' %}</a>
+                        <a href="#teamid" class="footer-nav-link">{% translate 'Команда' %}</a>
                     </li>
                     <li class="footer-nav-item">
                         <a href="{% url 'contacts' %}" class="footer-nav-link">{% translate 'Контакты' %}</a>
