add photo for art-diving

--- a/Points_of_view/points/templates/art-diving.html
+++ b/Points_of_view/points/templates/art-diving.html
@@ -9,9 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap" rel="stylesheet">
-<!--    <link rel="shortcut icon" href="../static/img/favicon.png" type="image/png">-->
-<!--    <link rel="stylesheet" href="../static/style/normalize.css">-->
-<!--    <link rel="stylesheet" href="../static/style/art-diving.css">-->
     <link rel="shortcut icon" href="{% static 'img/favicon.png' %}" type="image/png">
     <link rel="stylesheet" href="{% static 'style/normalize.css' %}">
     <link rel="stylesheet" href="{% static 'style/art-diving.css' %}">
@@ -21,7 +18,6 @@
     <header class="header container">
         <div class="header-container">
             <div class="header-logo">
-<!--                <img src="../static/img/logo-1.svg" alt="logo">-->
                 <img src="{% static 'img/logo-1.svg' %}" alt="logo">
             </div>
             <nav class="header-nav">
@@ -259,6 +255,7 @@
                 </h2>
                 <div class="realization-wrap">
                     <div class="realization-card">
+                        <img src="{% static 'img/Gallery of the Aslamazyan Sisters.png' %}" alt="Gallery of the Aslamazyan Sisters">
                         <h3 class="relization-name">
                             Cестры Асламазян
                         </h3>
@@ -267,6 +264,7 @@
                         </p>
                     </div>
                     <div class="realization-card">
+                        <img src="{% static 'img/The exhibition of the photographer Dmitry Nesmelov.png' %}" alt="The exhibition of the photographer Dmitry Nesmelov">
                         <h3 class="relization-name">
                             Дмитрий Несмелов
                         </h3>
@@ -275,6 +273,7 @@
                         </p>
                     </div>
                     <div class="realization-card">
+                        <img src="{% static 'img/Sculpture of the Jevo brothers.png' %}" alt="Sculpture of the Jevo brothers">
                         <h3 class="relization-name">
                             Братья Jevo
                         </h3>
@@ -283,6 +282,7 @@
                         </p>
                     </div>
                     <div class="realization-card">
+                        <img src="{% static 'img/The painting by Artyom Sargsyan.png' %}" alt="The painting by Artyom Sargsyan">
                         <h3 class="relization-name">
                             Артем Саргисян
                         </h3>
@@ -291,6 +291,7 @@
                         </p>
                     </div>
                     <div class="realization-card">
+                        <img src="{% static 'img/Canvas by the artist Shirin Heidarinezhad.png' %}" alt="Canvas by the artist Shirin Heidarinezhad">
                         <h3 class="relization-name">
                             Shirin Heidarinezhad
                         </h3>
